# test_RK1808_LSTM

./: CMakeLists.txt  README.MD
models/text_rec/: caffe_rec_debug-1.4.rknn  caffe_rec_debug-1.6.rknn
src/: server_text_detection.cpp  tcp_comm.cpp  tcp_comm.h
